outlines v1 && vision test, a vision quest
